syntax = "proto3";

package session;

service Session {
	rpc Get(SessionRequest) returns (SessionResponse) {}
	rpc Remove(SessionRequest) returns (SessionResponse) {}
}

service Insta {
	rpc Message(MessageRequest) returns (MessageResponse) {}
	rpc FollowedUsers(UserReq) returns (Users) {}
	rpc UserInfo(UserReq) returns (UserResp) {}
}

message SessionRequest {
    string account = 1;
	string password = 2;
}

message SessionResponse {
	string error = 1;
}

message Users {
	repeated User users = 1;
}

message UserReq {
	string account = 1;
	string Username = 2;
}

message UserResp {
	User user = 1;
}

message User {
	string Username	= 1;
	string FullName = 2;  
	string Description = 3; 
	int64  FollowerCount = 4;
	string ProfilePicUrl = 5;
	string FeaturedPicUrl = 6;
}

message MessageRequest {
    string sender = 1;
	string recipient = 2;
	string text = 3;
	string title = 4;
}

message MessageResponse {
	string response = 1;
	string error = 2;
}